USWDS Upgrade to 2.9.0 refinements Github issue: https://github.com/18F/methods/issues/455 Following migration guide: https://designsystem.digital.gov/documentation/migration/ Fixed: - gov banner expands/collapses correctly (this involved resetting z-index on a few header items) - nav items expand/collapse correctly - mobile menu style fixes

--- a/_sass/sticky.scss
+++ b/_sass/sticky.scss
@@ -2,21 +2,20 @@
   .banner {
     position: sticky;
     top: 0;
-    z-index: 9000;
+    z-index: 300; // matches 300 z-index of .usa-header
     background-color: $color-inverse;
   }
 }
 @media screen and (min-width: 950px) {
   .banner {
     position: relative;
-    z-index: 9000;
   }
 
   .usa-header {
     &.sticky {
       position: sticky;
       top: 0;
-      z-index: 9000;
+      z-index: 300; // matches 300 z-index of .usa-header
     }
   }
 }
